WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
164924
Salt network cache hashes
https://bugs.webkit.org/show_bug.cgi?id=164924
Summary
Salt network cache hashes
Antti Koivisto
Reported
2016-11-18 06:41:00 PST
Enhance privacy.
Attachments
patch
(25.76 KB, patch)
2016-11-18 07:04 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch
(25.83 KB, patch)
2016-11-18 07:46 PST
,
Antti Koivisto
achristensen
: review+
Details
Formatted Diff
Diff
patch for landing
(26.03 KB, patch)
2016-11-19 05:22 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
revert patch
(25.45 KB, patch)
2016-12-01 11:26 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch for landing 2
(26.85 KB, patch)
2016-12-08 07:29 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2016-11-18 07:04:19 PST
Created
attachment 295149
[details]
patch
WebKit Commit Bot
Comment 2
2016-11-18 07:06:35 PST
Attachment 295149
[details]
did not pass style-queue: ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCacheStorage.h:182: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 1 in 12 files If any of these errors are false positives, please file a bug against check-webkit-style.
Antti Koivisto
Comment 3
2016-11-18 07:29:25 PST
rdar://problem/29292717
Antti Koivisto
Comment 4
2016-11-18 07:46:27 PST
Created
attachment 295150
[details]
patch
WebKit Commit Bot
Comment 5
2016-11-18 07:47:51 PST
Attachment 295150
[details]
did not pass style-queue: ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCacheStorage.h:182: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 1 in 12 files If any of these errors are false positives, please file a bug against check-webkit-style.
Alex Christensen
Comment 6
2016-11-18 08:27:54 PST
Comment on
attachment 295150
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=295150&action=review
> Source/WebKit2/NetworkProcess/cache/NetworkCacheKey.cpp:104 > SHA1 sha1;
If we're really trying to make this more unidentifiable, should we be using SHA1?
Alex Christensen
Comment 7
2016-11-18 13:53:44 PST
Comment on
attachment 295150
[details]
patch doesn't have to be cryptographically secure. r=me
Antti Koivisto
Comment 8
2016-11-19 05:22:49 PST
Created
attachment 295263
[details]
patch for landing A bit more conservative version that still keeps the partition directories but names them with salted hashes. There might be performance benefits in keeping files in a single partition together.
WebKit Commit Bot
Comment 9
2016-11-19 05:25:18 PST
Attachment 295263
[details]
did not pass style-queue: ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCacheStorage.h:182: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 1 in 12 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 10
2016-11-19 16:38:18 PST
Comment on
attachment 295263
[details]
patch for landing Clearing flags on attachment: 295263 Committed
r208931
: <
http://trac.webkit.org/changeset/208931
>
WebKit Commit Bot
Comment 11
2016-11-19 16:38:29 PST
All reviewed patches have been landed. Closing bug.
Antti Koivisto
Comment 12
2016-12-01 11:26:58 PST
Created
attachment 295871
[details]
revert patch
Antti Koivisto
Comment 13
2016-12-01 11:27:35 PST
Reverting due to PLT regression.
WebKit Commit Bot
Comment 14
2016-12-01 11:29:29 PST
Attachment 295871
[details]
did not pass style-queue: ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCacheStorage.cpp:155: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCacheStorage.h:178: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 2 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Antti Koivisto
Comment 15
2016-12-01 11:31:52 PST
Reverted in
https://trac.webkit.org/r209189
Antti Koivisto
Comment 16
2016-12-08 07:29:55 PST
Created
attachment 296511
[details]
patch for landing 2
WebKit Commit Bot
Comment 17
2016-12-08 08:17:29 PST
Attachment 296511
[details]
did not pass style-queue: ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCacheStorage.h:182: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 1 in 12 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 18
2016-12-08 11:58:50 PST
Comment on
attachment 296511
[details]
patch for landing 2 Clearing flags on attachment: 296511 Committed
r209554
: <
http://trac.webkit.org/changeset/209554
>
WebKit Commit Bot
Comment 19
2016-12-08 11:58:55 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug